--- a/src/components/BusinessHero/BusinessHero.css
+++ b/src/components/BusinessHero/BusinessHero.css
@@ -93,3 +93,21 @@
   transform: scale(1.05);
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.4);
 }
+
+
+
+@media (max-width: 768px) {
+  .businesses-hero {
+    height: auto; 
+    min-height: 60vh; 
+    padding: 110px 20px 60px 20px; 
+    
+    align-items: flex-end; 
+    justify-content: center;
+  }
+
+  .businesses-hero-title {
+    font-size: 2.2rem; 
+    margin-top: 10px;
+  }
+}
